--- a/po/tr.po
+++ b/po/tr.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 20:49+0300\n"
+"PO-Revision-Date: 2021-06-29 08:42+0300\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Last-Translator: Hüseyin Fahri Uzun <mail@fahriuzun.com>\n"
 "Language-Team: \n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 2.3\n"
 
 #: src/clean.rs:31
 msgid "Do you want to remove ALL AUR packages from cache?"
@@ -272,7 +272,7 @@ msgstr "Bağlılıkları"
 
 #: src/info.rs:64 src/info.rs:110
 msgid "Make Deps"
-msgstr "Make Deps"
+msgstr "Make Bağlılıkları"
 
 #: src/info.rs:65 src/info.rs:111
 msgid "Check Deps"
@@ -284,7 +284,7 @@ msgstr "Çakıştıkları"
 
 #: src/info.rs:67 src/info.rs:114
 msgid "Maintainer"
-msgstr "Bakıcı/Geliştirici"
+msgstr "Bakıcı"
 
 #: src/info.rs:68 src/info.rs:115
 msgid "Votes"
