--- a/po/nl.po
+++ b/po/nl.po
@@ -32,8 +32,8 @@ msgstr "Kloonmap: {}"
 #: src/clean.rs:46
 msgid "\n"
 "Diff Directory: {}"
-msgstr "\n
-Verschil met map: {}"
+msgstr "\n"
+"Verschil met map: {}"
 
 #: src/clean.rs:48
 msgid "Do you want to remove all saved diffs?"
