--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,12 +4,13 @@
 # Pedro Liberatti <ferrahwolfeh@protonmail.com>, 2021.
 # Morgana Milo <morganamilo@archlinux.org>, 2021.
 # Juliano Marcelino <github@jmarcelino.com.br>, 2021.
+# João Vitor S. Anjos <jvanjos@protonmail.com>, 2021.
 msgid ""
 msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 17:46-0300\n"
+"PO-Revision-Date: 2021-06-29 19:54-0300\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,11 +21,11 @@ msgstr ""
 
 #: src/clean.rs:31
 msgid "Do you want to remove ALL AUR packages from cache?"
-msgstr "Você quer remover TODOS pacotes AUR do cache?"
+msgstr "Deseja remover TODOS pacotes AUR do cache?"
 
 #: src/clean.rs:33
 msgid "Do you want to remove all other AUR packages from cache?"
-msgstr "Você quer remover os outros pacotes AUR do cache?"
+msgstr "Deseja remover os outros pacotes AUR do cache?"
 
 #: src/clean.rs:40
 msgid "Clone Directory: {}"
@@ -40,7 +41,7 @@ msgstr ""
 
 #: src/clean.rs:48
 msgid "Do you want to remove all saved diffs?"
-msgstr "Você quer remover todas as divergências salvas?"
+msgstr "Deseja remover todas as divergências salvas?"
 
 #: src/clean.rs:64
 msgid "can't open diff dir: {}"
@@ -120,7 +121,7 @@ msgstr "seção '{}' desconhecida"
 
 #: src/config.rs:769 src/config.rs:824 src/config.rs:829
 msgid "key can not be empty"
-msgstr "a chave não pode estar vazia"
+msgstr "chave não pode estar vazia"
 
 #: src/config.rs:791
 msgid "error: unknown option '{}' in section [bin]"
@@ -189,11 +190,11 @@ msgstr "órfãos: "
 
 #: src/download.rs:206
 msgid "could not get current directory"
-msgstr "não foi possível baixar o diretório atual"
+msgstr "não foi possível obter o diretório atual"
 
 #: src/download.rs:210
 msgid "can not get repo packages: asp is not installed"
-msgstr "não foi possível baixar pacotes dos repositórios: asp não está instalado"
+msgstr "não foi possível obter pacotes dos repositórios: asp não está instalado"
 
 #: src/download.rs:231
 msgid "Missing ABS packages "
@@ -225,7 +226,7 @@ msgstr " PKGBUILDs atualizadas"
 
 #: src/download.rs:520
 msgid "{} is not installed: can not get repo packages"
-msgstr "{} não está instalado: impossível baixar pacotes dos repositórios"
+msgstr "{} não está instalado: impossível obter pacotes dos repositórios"
 
 #: src/download.rs:561
 msgid "asp returned {}"
@@ -382,7 +383,7 @@ msgstr "nenhum alvo especificado (use -h para ajuda)"
 #: src/install.rs:434 src/install.rs:461 src/search.rs:324 src/search.rs:360
 #: src/lib.rs:227
 msgid " there is nothing to do"
-msgstr " Nada para fazer"
+msgstr " nada para fazer"
 
 #: src/install.rs:488
 msgid "can't install AUR package as root"
